# AmpersandBoxDesign

./: .dockerignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  README.md  SPEC.md  blueprint.html  index.html  portfolio.html  portfolio_company_complete_research.html  portfolio_research_sources.html
box-and-box/: .gitignore  Dockerfile  README.md  fly.toml  package-lock.json  package.json
capabilities/: README.md  memory.episodic.md  reason.argument.md  space.fleet.md  time.forecast.md
contracts/: README.md
docs/: GRAPHONOMOUS_PROMPT.md  INGEST_PROMPT.md  NPM_PACKAGE.md  PORTFOLIO_COMPANY_COMPLETE_RESEARCH.md  PORTFOLIO_RESEARCH_SOURCES.md  architecture.md  comparison-table.md  competitive-landscape.md  conf.py  ecosystem-overview.md  faq.md  index.md  positioning.md  quickstart.md  research.md  runtime-walkthrough.md  topology-is-the-authority.md  topology.json  use-cases-autonomous-systems.md  use-cases-industry-verticals.md
examples/: README.md  auto-resolved.ampersand.json  customer-support.ampersand.json  field-service-dispatcher.ampersand.json  fleet-manager.ampersand.json  infra-operator.ampersand.json  research-agent.ampersand.json
old_scrap/: portfolio.html
prompts/: ATTENTION_ENGINE_PROMPT.md  CODEX_GUIDE.md  DUAL_LOOP_MACHINES.md  KAPPA_BUILD_PROMPT.md  KAPPA_DELIBERATOR_PROMPT.md  (+2 more)
sdk/python/ampersand_protocol/: .gitignore  README.md  pyproject.toml
sdk/python/ampersand_protocol/src/ampersand_protocol/: __init__.py  cli.py  compose.py  mcp.py  validator.py
sdk/python/ampersand_protocol/src/ampersand_protocol/schema/: ampersand.schema.json
(+134 files in other folders)
